Revision history for perl module CHI::Cascade

0.3
    - The run method can be called from other run method and from depends callref.
      This was made possible by creating a separate data instance for each root call of run method.
      Existed tests are passed but a test dedicated for this feature is not written yet.
    - Improved the test 11_fast_mmap_actual_term_expires.t
      (test_08_actual_term_expires.pm). It was fail in some high-load test CPAN computers
      because time intervals there were larger than I expected in the tests.

0.284 2014-07-20
    - Fix bug with ttl, when one target with ttl's rule had dependencies which had other ttl'd rules
    - few code optimizations
    - update inc::Module::Install up to v1.10

0.283 2014-06-17
    - Now i set up minimal version of perl 5.10 because i use defined-or '//'
      operator and some CPAN's tests are failed. I don't whant now to rewrite
      module for old version because i don't love very old soft and love
      an effective code, sorry ;-)

0.282 2014-06-16
    - some corrected t/test_04.pm
      ( test fail report here - http://www.cpantesters.org/cpan/report/8b744d08-764a-11e3-8d2f-66cfdfbfc7aa )
    - fix bug with 'valid_expires', the test was written for it
    - Now value_expires can be coderef for dynamic 'value_expires'

0.28 2013-10-24
    - Removed MYMETA.* files from MANIFEST and added to exclude lists (.gitignore & MANIFEST.SKIP)
      ( http://weblog.bulknews.net/post/44251476706/stop-shipping-mymeta-to-cpan )

0.27 2013-09-01 Stable release - i use it in production ;-)
    - Only fix Changes - reformated to CPAN::Changes::Spec

0.261 2013-06-11
    - Fix bug (not tested yet) - in rare cases there can infinite locks of
      targets in status CASCADE_COMPUTING. Fixed but not tested by me.

0.26 2012-12-14
    - New conception of non-blocking run method - deferring
    - The test 04_memcached_multi.t some fails in FreeBSD. May be this is